[tool.poetry]
name = "not-wazebot"
version = "0.1.0"
description = ""
authors = ["Rh4096 <rhelvetican@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyrogram = "^2.0.106"
msgspec = "^0.18.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
